# calc

./: README.md  calc.cabal
src/: Lib.hs
test/: Spec.hs
